mise en place de la modification et suppression d'utilisateur cote superadmin

--- a/templates/admin/channel/editChannel/editChannel.html.twig
+++ b/templates/admin/channel/editChannel/editChannel.html.twig
@@ -27,7 +27,7 @@
                     </div>
                     <div class="main d-flex flex-column align-items-center justify-content-center">
 
-                        <div class="row col-xl-12 alert alert-success"  style="display: none;" id="updatecompte" role="alert"></div>
+                        <div class="row col-xl-12 alert alert-success text-center"  style="display: none;" id="updatecompte" role="alert"></div>
                         <!--img logo-->
                         <div class="image-upload">
                             <label for="cameraInput">
