--- a/templates/admin/user/new/new.html.twig
+++ b/templates/admin/user/new/new.html.twig
@@ -21,7 +21,7 @@
                 </div>
                 <div class="main d-flex flex-column align-items-center justify-content-center">
                 
-                    <div class="row col-xl-12 alert alert-success"  style="display: none;" id="newcompte" role="alert"></div>
+                    <div class="row col-xl-12 alert alert-success text-center"  style="display: none;" id="newcompte" role="alert"></div>
                     
                     <!--input-->
                     <div class="row mb-5" style="margin-top: 8rem;">
