--- a/templates/superAdmin/user/edit/modal.html.twig
+++ b/templates/superAdmin/user/edit/modal.html.twig
@@ -16,9 +16,9 @@
                 </div>
             </div>
             <div class="modal-footer addUser">
-                <button type="button" class="row col-6 oui d-flex justify-content-center">Oui</button>
+                <button type="button" class="row col-6 oui d-flex justify-content-center" id="oui">Oui</button>
                 <div class="diviser-col"></div>
-                <button type="button" class="row col-6 non d-flex justify-content-center" data-dismiss="modal">Non</button>
+                <button type="button" class="row col-6 non d-flex justify-content-center" data-dismiss="modal" id="non">Non</button>
             </div>
         </div>
     </div>
