--- a/templates/superAdmin/user/new/script.html.twig
+++ b/templates/superAdmin/user/new/script.html.twig
@@ -20,118 +20,117 @@ console.log("new user")
 
 $(document).ready(function() {
 
-    let firebaseConfig;
-    let downloadUrl;
+const token = localStorage.getItem("token");
 
-    $.ajax({
-    method: "GET", 
-    url: "/superadmin/superadmin-firebase", 
-    async: true,
-    success: function(data) {
-    //console.log(data.apiKey+" "+data.authDomain+" "+data.databaseURL+" "+data.projectId+" "+data.storageBucket);
-    
-        firebaseConfig = {
-            apiKey: data.apiKey,
-            authDomain: data.authDomain,
-            databaseURL: data.databaseURL,
-            projectId: data.projectId,
-            storageBucket: data.storageBucket
-        };
+String.prototype.rtrim = function() {
+    return this.replace(/\s+$/, "");
+}
 
 
-        firebase.initializeApp(firebaseConfig);
+function inputUsername(inputData,input){
+    let usernameData = inputData.rtrim();
+    let usernameInput = input;
 
-        // On détecte le changement de fichier
-        $('#cameraInput').on('change', function() {
-            // On récupère le nouveau fichier
-            let selectedFile = event.target.files[0];
+    if(usernameData.length < 1){
+        usernameInput.after('<div class="erreur text-dark small" style="font-size: xx-small;">Le nom d\'utilisateur doit être de 3 caractères minimum et ne peux pas contenir d\'espace</div>');   
+        
+    }else{
+        if(usernameData > 10) {
+            usernameInput.after('<div class="erreur text-dark small" style="font-size: xx-small;">Le nom d\'utilisateur doit être  moins de 10 caractères</div>');
+        }
+         return usernameData;
+           
+    }
+}//  verify username
 
-            let filename = $('#cameraInput').val().replace(/C:\\fakepath\\/i, '');
-            let storageRef = firebase.storage().ref('/User/new' + filename);
+function inputEmail(inputData, input){
+    let emailData = inputData.rtrim();
 
-            // On envoi le fichier à Firebase
-            let upload = storageRef.put(selectedFile);
+    emailInput = input;
+    if(emailData.length < 1) {
+        emailInput.after('<div class="erreur text-dark small" style="font-size: xx-small;">Ce champ est obligatoire</div>');
+    }else{
+        let regEx = /^[a-zA-Z0-9][a-zA-Z0-9._%+-]{0,63}@(?:[a-zA-Z0-9-]{1,63}\.){1,125}[a-zA-Z]{2,63}$/;
+        let validEmail = regEx.test(emailData);
 
-            // Le traitement Firebase se fait ici
-            upload.on('state_changed', function(snapshot) {
-
-            }, function(error) {
-                // Si Firebase renvoi une error on l'a met ici
-                console.log(error)
-            }, function() {
-                // On récupère l'URL téléchargeable
-                downloadUrl = upload.snapshot.downloadURL;
-                // On l'affiche
-                 console.log(downloadUrl);
-            
-                // On remplace l'URL de l'image par la nouvelle
-                    $('#profil').attr('src', downloadUrl);
-                    $('#logo-setting').attr('src', downloadUrl)
-
-
-                        $('#saveUser').click(function(e){
-                            e.preventDefault();
-                            console.log(downloadUrl)
-
-                            let username = $('#username').val();
-                            let email = $('#email').val();
-                            let role = $('#sel1').val();
-
-
-                                 $(".erreur").remove();
-
-                                if (username.length < 3) 
-                                {
-                                    $('#username').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être de 3 caractères minimum et ne peux pas contenir d\'espace</div>'); 
-                                }else if(username.length > 10)
-                                {
-                                    $('#username').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être  moins de 10 caractères</div>');
-                                }
-                                if (email.length < 1)
-                                {
-                                $('#email').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Ce champ est obligatoire</div>'); 
-                                }else{
-                                    let regEx = /^[a-zA-Z0-9][a-zA-Z0-9._%+-]{0,63}@(?:[a-zA-Z0-9-]{1,63}\.){1,125}[a-zA-Z]{2,63}$/;
-                                    let validEmail = regEx.test(email);
-
-                                    if(!validEmail)
-                                    {
-                                        $('#email').after('<span class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Merci de rentrer une adresse email valide</span>');
-                                    }
-                                }
-
-                           if(username.length > 3 && email.length > 1)
-                            {    $.ajax({
-                                        type: "POST", 
-                                        url: "/superadmin/users/new", 
-                                        data: JSON.stringify({
-                                            "downloadUrl": downloadUrl,
-                                            "username": username,
-                                            "email": email,
-                                            "role": role,
-                                        }),
-                                        async: true,
-                                        success: function(responseText) {
-                                            console.log('compte crée avec succès');
-                                        },
-                                        error: function (error) {
-                                            console.log(error);
-                                        }
-                                });
-
-                            }else {
-                                console.log("toute les champs sont vides");
-                            }
-
-                        });       
-
-            });// i
-        });
-
+        if(!validEmail)
+        {
+            emailInput.after('<span class="erreur text-dark small" style="font-size: xx-small;">Merci de rentrer une adresse email valide</span>');
+        }
+        else{
+            return emailData;
+        }
     }
 
-    });
+}//  email verify
 
+
+
+    const reset = () => {
+        $(".btn_submit").attr("disabled", false);
+        $(".btn_submit").css("background-color", "#EF0051");
+        $(".btn_submit").hover(() => { $(".btn_submit").css("background-color", "#D31052") })
+    };
+
+    const disable = () => {
+        $(".btn_submit").attr("disabled", true);
+        $(".btn_submit").css("background-color", "gray");
+    }
+
+
+
+        $('#saveUser').click(function(e){
+            e.preventDefault();
+            disable();
+
+            let email = $('#email').val();
+            let inpEmail = $('#email');
+
+            let username = $('#username').val();
+            let inpUser = $('#username');
+
+            let createEmail = inputEmail(email,inpEmail);
+            let createUser = inputUsername(username,inpUser);
+
+            let profilUrl = $('#profil').attr('src');
+
+            const token = localStorage.getItem("token");
+
+            if(token !== "" || createUser !== undefined || createEmail !== undefined){
+
+
+                $.ajax({
+                    type: "POST", 
+                    url: "https://webradio-stream.herokuapp.com/authorized/users/create", 
+                    headers: {
+                        'Authorization':'Bearer ' + token
+                    },
+                    data: {
+                        username: createUser,
+                        email: createEmail,
+                    },
+                }).done((response)=>{
+                    reset();
+
+                    if(response.message != undefined)
+                    {
+                        $('#newcompte').html(response.message);
+                        $('#newcompte').css("display","block");
+
+                        console.log(response.message);
+                    }
+                    console.log(response);
+
+                }).fail((error)=>{
+                    reset();
+
+                    console.log(error);
+
+                });//fin
+
+            }// if
+
+        }); // fin onclick 
     
 });
 </script>
