--- a/templates/admin/settings/base.html.twig
+++ b/templates/admin/settings/base.html.twig
@@ -24,7 +24,7 @@
                   
                   <form>  
 
-                    <div class="row col-xl-12 alert alert-success" style="display: none;" id="mycompte" role="alert"></div>
+                    <div class="row col-xl-12 alert alert-success text-center" style="display: none;" id="mycompte" role="alert"></div>
 
                     <!--img logo-->
                    <div class="image-upload">
@@ -65,7 +65,7 @@
                         <div class="row mb-4">
                             <div class="col-sm">
                             
-                                <div class="row col-xl-12 alert alert-success"  style="display: none;" id="mypassword" role="alert">
+                                <div class="row col-xl-12 alert alert-success text-center"  style="display: none;" id="mypassword" role="alert">
                                     
                                 </div>
 
