--- a/templates/superAdmin/user/edit/script.html.twig
+++ b/templates/superAdmin/user/edit/script.html.twig
@@ -16,15 +16,80 @@
 
 $(document).ready(function() {
 
+String.prototype.rtrim = function() {
+    return this.replace(/\s+$/, "");
+}
+    // fonction pour la verification de la valeur input
+    function inputUsername(inputData,input){
+    let usernameData = inputData.rtrim();
+    let usernameInput = input;
+
+    if(usernameData.length < 1){
+        usernameInput.after('<div class="erreur text-dark small" style="font-size: xx-small;">Le nom d\'utilisateur doit être de 3 caractères minimum et ne peux pas contenir d\'espace</div>');   
+        
+    }else{
+        if(usernameData > 10) {
+            usernameInput.after('<div class="erreur text-dark small" style="font-size: xx-small;">Le nom d\'utilisateur doit être  moins de 10 caractères</div>');
+        }
+         return usernameData;
+           
+    }
+}//  verify username
+
+
+    const token = localStorage.getItem("token");
+    const userId = localStorage.getItem("idForUser");
+
+    const reset = () => {
+        $(".btn_submit").attr("disabled", false);
+        $(".btn_submit").css("background-color", "#EF0051");
+        $(".btn_submit").hover(() => { $(".btn_submit").css("background-color", "#D31052") })
+    };
+
+    const disable = () => {
+        $(".btn_submit").attr("disabled", true);
+        $(".btn_submit").css("background-color", "gray");
+    }
+
+    /*
+    *recuperer l'utilisateur 
+    */
+
+    if(token !== ""){
+
+        $.ajax({
+                type: "GET", 
+                url: "https://webradio-stream.herokuapp.com/authorized/user/"+userId, 
+                headers: {
+                    'Authorization':'Bearer ' + token
+                }
+            }).done((response)=>{
+
+                if(response != undefined)
+                {
+                    $('#username').attr('value', response.user[0].username);
+                    $('#sel1 :selected').val(response.user[0].role);
+                    console.log(response.user[0].role);
+                }
+                console.log(response);
+
+            }).fail((error)=>{
+
+                console.log(error);
+
+            });
+    
+
+
     let firebaseConfig;
     let downloadUrl;
 
     $.ajax({
     method: "GET", 
     url: "/firebase", 
-    async: true,
-    success: function(data) {
-    
+    })
+    .done(function(data) {
+
         firebaseConfig = {
             apiKey: data.apiKey,
             authDomain: data.authDomain,
@@ -43,7 +108,7 @@ $(document).ready(function() {
 
         
             let filename = $('#cameraInput').val().replace(/C:\\fakepath\\/i, '');
-            let storageRef = firebase.storage().ref('/User/{{user.id}}' + filename);
+            let storageRef = firebase.storage().ref('/User/'+userId+ filename);
 
             // On envoi le fichier à Firebase
             let upload = storageRef.put(selectedFile);
@@ -62,68 +127,69 @@ $(document).ready(function() {
             
                 // On remplace l'URL de l'image par la nouvelle
                     $('#profil').attr('src', downloadUrl);
-                    $('#logo-setting').attr('src', downloadUrl)
+                    $('#logo-setting').attr('src', downloadUrl)      
 
+            }) 
+        });// call
 
-                        $('#enregister').click(function(e){
-                            e.preventDefault();
-                            console.log(downloadUrl)
+        //evennement qui se declanche lorqu'on clique sur enregistrer
+        $('#enregister').click(function(e){
+            e.preventDefault();
+            disable();
 
-                             let username = $('#username').val();
-                            let email = $('#email').val();
-                            let role = $('#sel1').val();
+                let profil = $('#profil').attr('src');
+                
+                let username = $('#username').val();
+                let inpUser = $('#username');
 
+                let role = $('#sel1').val();
 
-                                 $(".erreur").remove();
+                let dataUsername = inputUsername(username,inpUser);
+                
+                
+            //envoi de la mise a jour de l'utilisateur
+            $.ajax({
+                type: "PUT", 
+                url: "https://webradio-stream.herokuapp.com/authorized/users/"+userId, 
+                headers: {
+                    'Authorization':'Bearer ' + token
+                },
+                data: {
+                    avatar: profil,
+                    username: dataUsername,
+                    role: role
+                    
+                },
+            }).done((response)=>{
+                reset();
 
-                                if (username.length < 3) 
-                                {
-                                    $('#username').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être de 3 caractères minimum et ne peux pas contenir d\'espace</div>'); 
-                                }else if(username.length > 10)
-                                {
-                                    $('#username').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Le nom d\'utilisateur doit être  moins de 10 caractères</div>');
-                                }
-                                if (email.length < 1)
-                                {
-                                $('#email').after('<div class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Ce champ est obligatoire</div>'); 
-                                }else{
-                                    let regEx = /^[a-zA-Z0-9][a-zA-Z0-9._%+-]{0,63}@(?:[a-zA-Z0-9-]{1,63}\.){1,125}[a-zA-Z]{2,63}$/;
-                                    let validEmail = regEx.test(email);
+                if(response.message != undefined)
+                {
+                    $('#updatecompte').html(response.message);
+                    $('#updatecompte').css("display","block");
+                    
 
-                                    if(!validEmail)
-                                    {
-                                        $('#email').after('<span class="erreur text-dark medium" style="font-size: small; margin-top: 10px;">Merci de rentrer une adresse email valide</span>');
-                                    }
-                                }
+                    console.log(response.message);
+                }
+                console.log(response);
 
-                            $.ajax({
-                                    type: "POST", 
-                                    url: "/superadmin/users/{{user.id}}/edit", 
-                                    data: JSON.stringify({
-                                        "downloadUrl": downloadUrl,
-                                        "username": username,
-                                        "email": email,
-                                        "role": role,
-                                    }),
-                                    async: true,
-                                    success: function(responseText) {
-                                        console.log('ici succ');
-                                    },
-                                    error: function (error) {
-                                        console.log(error);
-                                    }
-                            });
+            }).fail((error)=>{
+                reset();
 
-                        });       
+                console.log(error);
 
-            });// i
+            });//fin
+
+        }); //onclick
+
+        }).fail((error)=>{
+
+            console.log(error);
+
         });
 
     }
 
     });
-
-    
-});
 
 </script>
