--- a/templates/superAdmin/user/index.html.twig
+++ b/templates/superAdmin/user/index.html.twig
@@ -13,20 +13,27 @@
             <!-- Begin Page Content -->
             <div class="container-fluid">
 
-                <div class="row mt-4 mb-2">
-                    <div class="col-xl-2">
+                <div class="row mt-2">
+                    <div class="col-sm-12">
                         <h4 class="h4 text-gray-800">Utilisateurs</h4>
                     </div>
-                    <div class="col-xl-10 d-flex">
-                        {#{ form_start(form) }}
-                        <!-- Search form -->
-                        <div class="form-group has-search user">
-                            <button class="fa fa-search form-control-feedback"></button>
-                             {{ form_row(form.channels) }}
+
+                    <div class="col-sm-12">
+
+                        <div class="conteneur d-flex flex-column align-items-center justify-content-center">
+                            <div class="row recherche">
+                                <div class="col">
+                                    <div class="form-group has-search ">
+                                        <span class="fa fa-search form-control-feedback"></span>
+                                        <input type="text" class="form-control text-dark" id="myInput" placeholder="Rechercher une radio"> 
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                      {{ form_end(form) }#}
                     </div>
+
                 </div>
+
                 <div class="row">
                     <!-- table -->
                     <div class="col-xl-12">
@@ -36,49 +43,24 @@
                                 <div class="row col-sm-12">
                                     <div class="table-responsive">
                                 
-                                    <table id="table" class"table table-bordered w-100" role="grid">
-                                    <thead>
-                                        <tr id='entete' role="row">
-                                            <th scope='col'>Avatar</th>
-                                            <th scope='col'>Username</th>
-                                            <th scope='col'>Email</th>
-                                            <th scope='col'>Chaîne</th>
-                                            <th scope='col'>Rôle</th>
-                                            <th scope='col'>Status</th>
-                                            <th scope='col'>Management</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id='corps-table'>
-                                         {% for user in users %}
-                                         {% if user.role != "ROLE_SUPER_ADMIN" %}
+                                        <table id="users-table" class"table-bordered" width="100%" cellspacing="0">
+                                        <thead>
                                             <tr>
-                                                <td><img class="rounded-circle" style="font-size:2em; width:31px; height:32px;" src="{{ user.avatar }}" alt="" id="profil"></td>
-                                                <td>{{ user.username }}</td>
-                                                <td>{{ user.email }}</td>
-                                                <td>{{ user.channels }}</td>
-                                                <td>{{ user.role }}</td>
-                                                <td>{{ user.status }}</td>
-                                                <td>
-                                                    {% if user.role == "ROLE_ADMIN" %}
-                                                    <a href='{{ path('superadmin.users.edit', {'id': user.id}) }}' class='fa-2x far fa-edit' id=''></a>
-                                                </td>
-                                                {% else %}
-                                                        <a  href='#bannirModal' data-toggle='modal' data-dismiss='modal'  class='far fa-trash-alt fa-2x'></a>
-                                                        <a href='{{ path('superadmin.users.edit', {id: user.id}) }}' style="display: inline-block" class='fa-2x far fa-edit'></a>
-                                                </td>
-                                                    {% endif %}
+                                                <th>Avatar</th>
+                                                <th>Username</th>
+                                                <th>Email</th>
+                                                <th>Chaîne</th>
+                                                <th>Status</th>
+                                                <th>Management</th>
                                             </tr>
-                                            {% endif %}
-                                            {% include 'superAdmin/user/removeUser/modal.html.twig' %}
-                                         {% endfor %}
-                                    </tbody>
+                                        </thead>
+                                        <tbody id='users-corps'>
+                                            
+                                                
+                                        </tbody>
                                     </table>
                                     <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
-                                        {{ knp_pagination_render(users) }}
-                                    </div>
-                                    <div style="height: auto; text-align: center" class="chart-area" id="pagination_data">
-                                        <div id="users" class="mb-3"></div>
-                                        <div id="usersdesc" class="mb-3"></div>
+                                      
                                     </div>
                                     <a href="{{path('superadmin.users.new')}}" class="btn add_user">+</a>
                                   </div>
@@ -109,7 +91,7 @@
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
 </a>
-
+{% include 'superAdmin/user/removeUser/modal.html.twig' %}
 
 </body>
 
