recuperation de la liste des signalements cote superadmin

--- a/templates/superAdmin/signalements/bannir.html.twig
+++ b/templates/superAdmin/signalements/bannir.html.twig
@@ -13,7 +13,8 @@
                 </div>
             </div>
             <div class="modal-footer bannirButton">
-                <button type="button" class="row col-6 oui d-flex justify-content-center"><a href="{{ path('superadmin.bannir.delete', {id: Signalement.id}) }}">Oui</a></button>
+                <button type="button" class="row col-6 oui d-flex justify-content-center">Oui</button>
+               
                 <div class="diviser-col"></div>
                 <button type="button" class="row col-6 non d-flex justify-content-center" data-dismiss="modal">Non</button>
             </div>
