--- a/templates/superAdmin/signalements/show.html.twig
+++ b/templates/superAdmin/signalements/show.html.twig
@@ -38,18 +38,18 @@
                                                 </tr>
                                             </thead>
                                             <tbody id='malist' role="row">
-                                                {% for OneSignal in OneSignals %}
+                                                
                                                     <tr>
-                                                        <td><a href="{{ path('superadmin.Signalements.blankpage') }}">{{ OneSignal.fluxAudio }}</a></td>
-                                                        <td>{{ OneSignal.dateDebutStream }}</td>
-                                                        <td>{{ OneSignal.dateHeureSignalement }}</td>
-                                                        <td>{{ OneSignal.motif }}</td>
+                                                        <td><a href="#"></a></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
                                                     </tr>
-                                                {% endfor %}
+                                               
                                             </tbody>
                                         </table>
                                           <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
-                                                 {{ knp_pagination_render(OneSignals) }}
+                                                
                                            </div>  
                                     </div>
                                 </div>
