--- a/templates/superAdmin/script.html.twig
+++ b/templates/superAdmin/script.html.twig
@@ -21,35 +21,211 @@ console.log("je suis ici dans dash")
 
 $(document).ready(function() {
 
-    $.ajax({
-    method: "GET", 
-    url: "/superadmin/stats", 
-    async: true,
-    success: function(data) {
-        mydata = data[0];
-        statisticsData = mydata.statistics
-        console.log(statisticsData);
+     const token = localStorage.getItem("token");
 
-             let nombre_dutilisateurs;
-             let nombre_dabonnes;
-             let total_decoutes;
-             let nombre_chaines_creee;
-             
-        for(var j=0;j<mydata.statistics.length;j++){
-            nombre_dutilisateurs = mydata.statistics[j].nombre_dutilisateurs;
-            nombre_dabonnes = mydata.statistics[j].nombre_dabonnes;
-            total_decoutes = mydata.statistics[j].total_decoutes;
-            nombre_chaines_creee = mydata.statistics[j].nombre_chaines_creee;
-        }
+    if(token !== "") {
 
-            $("#nombre_dutilisateurs").html(nombre_dutilisateurs);
-            $("#nombre_dabonnes").html(nombre_dabonnes);
-            $("#total_decoutes").html(total_decoutes);
-            $("#nombre_chaines_creee").html(nombre_chaines_creee);
-       
-    }
 
-});
+        /*
+        * Total dAbonnée
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/subscribers",
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    /*$('#nbAbonne').html(response.favoris);
+                    console.log(response.favoris);*/
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// fin Total de favoris d'une chaîne
+
+
+        /*
+        * Total de plannification
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/stream/plan/5e96bc595ca841cb25233bf7",
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    $('#nbPlan').html(response.nombre_plannification);
+                    console.log(response.nombre_plannification);
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// 
+
+
+        /*
+        * Total d'utilisateurs
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/users",
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    /*$('#nbAbonne').html(response.favoris);
+                    console.log(response.favoris);*/
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// fin Total d'utilisateurs
+
+
+        /*
+        * Total de stream crée
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/stream",
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    $('#nbAbonne').html(response.stream_crée);
+                    console.log(response.stream_crée);
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// fin Total de stream crée
+
+        /*
+        * Total de signalements
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/signalements",
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    /*$('#nbAbonne').html(response.favoris);
+                    console.log(response.favoris);*/
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// fin Total de signalements
+
+
+        /*
+        *  Total de chaînes inactives
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/channels/inactive",
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    /*$('#nbAbonne').html(response.favoris);
+                    console.log(response.favoris);*/
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// fin Total de chaînes inactives
+
+        /*
+        * Total d'utilisateurs inactifs
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/users/inactive",
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    /*$('#nbAbonne').html(response.favoris);
+                    console.log(response.favoris);*/
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// fin Total d'utilisateurs inactifs
+
+
+
+        /*
+        * Total utilisateurs actifs
+        */
+
+        $.ajax({
+            type: "GET",
+            url: "https://webradio-stream.herokuapp.com/authorized/stats/users/active",
+            headers: {
+                'Authorization':'Bearer ' + token
+            }
+        }).done((response) =>{
+            
+                if(response != undefined)
+                {
+                    /*$('#nbAbonne').html(response.favoris);
+                    console.log(response.favoris);*/
+                }
+                console.log(response);
+
+        }).fail((error) =>{
+            
+            console.log(error);
+        });// fin Total utilisateurs actifs
+
+    }//end if  
+
 
 });
 
