--- a/templates/superAdmin/settings/base.html.twig
+++ b/templates/superAdmin/settings/base.html.twig
@@ -22,57 +22,63 @@
                 </div>
                 <div class="main d-flex flex-column align-items-center justify-content-center">
 
+                    <form>  
+
+                    <div class="row col-xl-12 alert alert-success text-center" style="display: none;" id="mycompte" role="alert"></div>
+
                     <!--img logo-->
-                     <div class="image-upload">
-                            <label for="cameraInput">
-                                <img src="{{ user.avatar }}" alt="" id="profil">
-                                <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
-                            </label>
-                            <input type="file" accept="image/*" id="cameraInput">
-                        </div>
+                   <div class="image-upload">
+                        <label for="cameraInput">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="avatar" id="profil">
+                            <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
+                        </label>
+                        <input type="file" accept="image/*" id="cameraInput">
+                    </div>
                     <!--input-->
 
+        
                     <div class="row mb-5">
                         <div class="col-sm">
                             <div class="form-group settingsAdmin" id="name">
-                                <input type='text' id="username" class='form-control text-center text-black' placeholder='username' value='{{user.username}}'>
+                                <input type='text' id="username" class='form-control text-center text-black' placeholder='username' value=''>
                             </div>
                             <div class="form-group settingsAdmin" id="nomchaine">
-                                 <input type='text' id="email" class='form-control text-center text-black' placeholder='Email' value='{{user.email}}'>
+                                 <input type='text' id="email" class='form-control text-center text-black' placeholder='Email' value=''>
                             </div>
                             <div class="form-group settingsAdmin">
-                                <input type="button" id="button-settingsAdmin" class="form-control border-0 font-weight-bold text-white"  style="background-color:#EF0051;" value="Enregistrer">
+                                <input type="button" id="button-settingsAdmin" class="form-control border-0 font-weight-bold text-white btn_submit"  style="background-color:#EF0051;" value="Enregistrer">
                             </div>
                         </div>
                     </div>
-
+                </form>
                 <!-- Divider -->
                 <hr class="sidebar-divider my-0 w-100 mb-5">
 
-                <form>
-                    <div class="row mb-3">
-                        <div class="col-xl-12 d-flex flex-column align-items-center justify-content-center">
-                            <div class="">
-                                <h2 class="h2 mb-2 text-black">Changer mon mot de passe</h2>
+                    <form>
+                        <div class="row mb-3">
+                            <div class="col-xl-12 d-flex flex-column align-items-center justify-content-center">
+                                <div class="">
+                                    <h2 class="h2 mb-2 text-black">Changer mon mot de passe</h2>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row mb-4">
-                        <div class="col-sm">
-                            <div class="row col-xl-12 alert alert-success"  style="display: none;" id="mypassword" role="alert">
-                                succès le mot de passe a changer!!
-                            </div>
+                        <div class="row mb-4">
+                            <div class="col-sm">
                             
-                            <div class="form-group setting">
-                                <input type='password' id="password" class='form-control text-center text-black' placeholder='mot de passe' value='{{user.password}}'>
-                            </div>
+                                <div class="row col-xl-12 alert alert-success text-center"  style="display: none;" id="mypassword" role="alert">
+                                    
+                                </div>
 
-                            <div class="form-group setting">
-                                <input type="submit" id="savePassword" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;" value="Enregistrer">
+                                <div class="form-group setting">
+                                    <input type='password' id="password" class='form-control text-center text-black' placeholder='mot de passe' value=''>
+                                </div>
+
+                                <div class="form-group setting">
+                                    <input type="submit" id="savePassword" class="form-control border-0 font-weight-bold text-white btn_submit" style="background-color:#EF0051;" value="Enregistrer">
+                                </div>
                             </div>
-                        </div>
-                    </div> 
-                </form>
+                        </div> 
+                    </form>
 
                 </div>  
             </div>
