--- a/templates/superAdmin/signalements/base.html.twig
+++ b/templates/superAdmin/signalements/base.html.twig
@@ -14,18 +14,21 @@
             <div class="container-fluid">
 
                 <div class="row mt-4 mb-2">
-                    <div class="col-xl-2">
+                    <div class="col-xl-12">
                         <h4 class="h4 text-gray-800">Signalements</h4>
                     </div>
-                    <div class="col-xl-10 d-flex"> 
+                    <div class="col-xl-12"> 
 
-                     {#{ form_start(form) }}
-                        <!-- Search form -->
-                        <div class="form-group has-search user">
-                            <button class="fa fa-search form-control-feedback"></button>
-                             {{ form_row(form.channels) }}
+                        <div class="conteneur d-flex flex-column align-items-center justify-content-center">
+                            <div class="row recherche">
+                                <div class="col">
+                                    <div class="form-group has-search ">
+                                        <span class="fa fa-search form-control-feedback"></span>
+                                        <input type="text" class="form-control text-dark" placeholder="Rechercher une radio"> 
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                      {{ form_end(form) }#}
                     </div>
                 </div>
                 <div class="row">
@@ -36,34 +39,23 @@
                             <div class="card-body">
                                 <div class="row col-sm-12">
                                     <div class="table-responsive">
-                                
-                                    <table id="table" class"table table-bordered w-100" role="grid">
-                                    <thead>
-                                        <tr id='entete' role="row">
-                                            <th scope='col'>Avatar</th>
-                                            <th scope='col'>Nom de la chaîne</th>
-                                            <th scope='col'>Nombre de signalements</th>
-                                            <th scope='col'>Liste des signalements</th>
-                                            <th scope='col'>Management</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id='corps-table'>
-                                         {% for Signalement in Signalements %}
+                                    <table class="table table-bordered" id="signal-table" width="100%" cellspacing="0">
+                                        <thead>
                                             <tr>
-                                                <td><img class="rounded-circle" style="font-size:2em; width:31px; height:32px;" src="{{ Signalement.avatar }}" alt="" id="profil"></td>
-                                                <td>{{ Signalement.nomChaine }}</td>
-                                                <td>{{ Signalement.nombreSignal }}</td>
-                                                <td><a href='{{ path('superadmin.Signalements.show', {slug: Signalement.slug, id: Signalement.id}) }}' >{{ Signalement.listSignal }}</a></td>
-                                                <td>
-                                                   <a href='#bannirModal' data-toggle='modal' data-dismiss='modal' class='btn text-danger'>{{ Signalement.management }}</a>
-                                                </td>
+                                                <th>Avatar</th>
+                                                <th>Nom de la chaîne</th>
+                                                <th>Status</th>
+                                                <th>Management</th>
                                             </tr>
-                                            {% include 'superAdmin/signalements/bannir.html.twig' %}
-                                         {% endfor %}
-                                    </tbody>
-                                    </table>
+                                        </thead>
+                                        <tbody id="signal-corps">
+
+                                    
+                                        </tbody>
+                                    </table> 
+                                   
                                     <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
-                                        {{ knp_pagination_render(Signalements) }}
+                                      
                                     </div>      
                                   </div>
                                 </div>                                
