--- a/templates/passwordLost/modal.html.twig
+++ b/templates/passwordLost/modal.html.twig
@@ -8,7 +8,7 @@
                     <input type="email" class=" form-control password-input" placeholder="Email">    
                 </div>  
                 <div class="row col-sm justify-content-center">
-                    <a id="mylink" href="#confirmModal" data-toggle="modal" class="btn bouton-password"><i class="fas fa-arrow-right "></i></a>
+                    <button id="passwordLost" data-target="" data-toggle="modal" class="btn bouton-password"><i class="fas fa-arrow-right "></i></button>
                 </div>  
             </div><!--modal-body-->
         <div>
