--- a/templates/register/modal.html.twig
+++ b/templates/register/modal.html.twig
@@ -8,6 +8,7 @@
 
             <form id="register_form">
                 <div class="alert alert-danger" style="display: none;font-size: 0.7rem;" id="register-alert"></div>
+                <div class="alert alert-success" style="display:none;font-size: 0.7rem;" id="register-success"></div>
 
                 <div class="form-group champ">
                     <input type="email" id="register_email" class="form-control" name="email" placeholder="Email">
